--- a/assets/css/bond.css
+++ b/assets/css/bond.css
@@ -5,62 +5,42 @@ body {
 }
 
 /* Custom Styling for Navbar */
-.navbar {
-    background-color: #ffffff; /* Navbar background */
+.navbar-nav {
+    flex-grow: 1;
+    justify-content: center;
 }
 
-.navbar-brand img {
-    height: 50px; /* Logo height */
+.navbar h1 {
+    font-size: 1.5rem;
+    margin: 0;
+    font-weight: bold;
 }
 
-.navbar-nav .nav-link {
-    color: #000; /* Text color for nav links */
-}
-
-.navbar-nav .nav-link:hover {
-    color: #007bff; /* Color on hover */
-}
-
-/* Custom Styling for Toggle Button */
-.custom-toggler {
-    background: transparent;
+/* Hamburger Animation */
+.navbar-toggler {
     border: none;
-    padding: 0;
-    cursor: pointer;
+    outline: none;
 }
 
-.line {
+.navbar-toggler span {
     display: block;
-    width: 30px; /* Width of the lines */
-    height: 3px; /* Height of the lines */
-    margin: 5px auto; /* Space between the lines */
-    background-color: #000; /* Color of the lines */
-    transition: all 0.3s ease; /* Animation for smooth transition */
+    width: 25px;
+    height: 3px;
+    background-color: black;
+    margin: 5px 0;
+    transition: all 0.4s ease-in-out;
 }
 
-.navbar-toggler.collapsed .line:nth-child(1) {
-    transform: none; /* Reset transformation when collapsed */
+.navbar-toggler.collapsed span:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
 }
 
-.navbar-toggler.collapsed .line:nth-child(2) {
-    opacity: 1; /* Show the middle line */
+.navbar-toggler.collapsed span:nth-child(2) {
+    opacity: 0;
 }
 
-.navbar-toggler.collapsed .line:nth-child(3) {
-    transform: none; /* Reset transformation when collapsed */
-}
-
-/* When navbar is expanded */
-.navbar-toggler:not(.collapsed) .line:nth-child(1) {
-    transform: translateY(8px) rotate(45deg); /* Rotate the first line */
-}
-
-.navbar-toggler:not(.collapsed) .line:nth-child(2) {
-    opacity: 0; /* Hide the middle line */
-}
-
-.navbar-toggler:not(.collapsed) .line:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg); /* Rotate the last line */
+.navbar-toggler.collapsed span:nth-child(3) {
+    transform: rotate(-45deg) translate(5px, -5px);
 }
 
 /* Form Styles */
