--- a/assets/css/bond.css
+++ b/assets/css/bond.css
@@ -10,7 +10,8 @@ body {
 }
 
 .navbar-brand img {
-    height: 40px;
+    height: 30px; /* Adjusted size for the logo */
+    max-height: 40px; /* Ensure it doesn't exceed this height */
 }
 
 footer {
