--- a/assets/css/bond.css
+++ b/assets/css/bond.css
@@ -105,7 +105,7 @@ footer .social-icons a:hover {
 
 
 .error {
-    border: 1px solid red;
+    border: 1px solid red; /* Red border for invalid inputs */
 }
 
 .success {
